...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_practice"
            style="@style/ColoredButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/practice"
...
        <Button
            android:id="@+id/btn_my_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ColoredButton"
            android:layout_marginTop="24dp"
            android:text="@string/my_writing"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_challenges"
...
